# mobilican

./: .gitignore  LICENSE  README.md  log.txt
mobilican/: CMakeLists.txt  package.xml  updater.sh
mobilican/launch/: armadillo_2.launch  komodo_2.launch  lizi_2.launch  mobilican.launch  trx.launch
mobilican/setup/: commands_arr.sh  log.txt  robotican.txt_img  setup.sh
mobilican/setup/rules/: 49-teensy.rules  51-bms_battery.rules  52-roboteq.rules  53-usb2dxl.rules  80-microsoft_webcam.rules  90-kinect2.rules  99-realsense-libusb.rules  hokuyo.rules
mobilican_control/: CMakeLists.txt  package.xml
mobilican_control/armadillo2/launch/: armadillo2_controllers.launch
mobilican_control/armadillo_2/config/: armadillo2_control.yaml
mobilican_control/armadillo_2/launch/: armadillo2_gazebo_controllers.launch  armadillo2_hw_controllers.launch
mobilican_control/komodo2/config/: komodo2_control.yaml
mobilican_control/komodo2/launch/: komodo2_controllers.launch
mobilican_control/komodo_2/config/: komodo2_control.yaml
mobilican_control/komodo_2/launch/: komodo2_controllers.launch
mobilican_control/lizi2/launch/: lizi2_controllers.launch
mobilican_control/lizi_2/config/: lizi_control.yaml
mobilican_control/lizi_2/launch/: lizi_controllers.launch
mobilican_control/trx/config/: trx_control.yaml
mobilican_control/trx/launch/: trx_controllers.launch
mobilican_controllers/diff_drive_slip_controller/: package.xml
mobilican_controllers/diff_drive_slip_controller/src/: diff_drive_slip_controller.cpp
mobilican_demos/moveit_cartesian_path/: CMakeLists.txt  package.xml
mobilican_demos/moveit_cartesian_path/src/: moveit_cartesian_path_node.cpp
mobilican_demos/navigation_goal/: CMakeLists.txt  package.xml
mobilican_demos/navigation_goal/src/: move_base_client.cpp
mobilican_demos/pick_and_place/: CMakeLists.txt  package.xml
mobilican_demos/pick_and_place/cfg/: FindObjectDynParam.cfg
mobilican_demos/pick_and_place/include/pick_and_place/: GazeboGraspFix.h
mobilican_demos/pick_and_place/launch/: drive2object.launch  drive_and_pick.launch  find_objects.launch  pick_and_place.launch  point_head.launch
mobilican_demos/pick_and_place/src/: GazeboGraspFix.cpp  GazeboGraspGripper.cpp  drive_and_pick.cpp  find_objects.cpp  pan_tilt_object_tracking.cpp  pick_and_place_node.cpp  point_head_action.cpp
mobilican_description/: CMakeLists.txt  package.xml
mobilican_description/armadillo2/launch/: armadillo2_gaz_test.launch
mobilican_description/armadillo2/urdf/: armadillo2.xacro  armadillo2_gazebo.xacro  intel_d435.urdf
mobilican_description/armadillo_2/launch/: armadillo2_gaz_test.launch
mobilican_description/armadillo_2/urdf/: armadillo2.xacro  armadillo2_gazebo.xacro  intel_d435.urdf
mobilican_description/komodo2/urdf/: komodo2.xacro  komodo2_gazebo.xacro
mobilican_description/komodo_2/urdf/: komodo2.xacro  komodo2_gazebo.xacro
mobilican_description/lizi2/launch/: joints_test.launch  lizi2_gaz_test.launch
mobilican_description/lizi2/urdf/: lizi2.xacro  lizi2_gazebo.xacro
mobilican_description/lizi_2/launch/: joints_test.launch  lizi2_gaz_test.launch
mobilican_description/lizi_2/urdf/: lizi.xacro  lizi_gazebo.xacro
mobilican_description/trx/launch/: desc_test.launch  display.launch
mobilican_description/trx/meshes/: wheel.STL
mobilican_description/trx/urdf/: trx.urdf  trx_gazebo.xacro
mobilican_gazebo/: CMakeLists.txt  package.xml
mobilican_gazebo/macros/: VLP-16.urdf.xacro  imu.xacro
mobilican_gazebo/models/market_walls/: model.config  model.sdf
mobilican_gazebo/worlds/: market_asiles.world  maze.world  objects_on_table.world  simplified_market.world
mobilican_hw/: CMakeLists.txt  package.xml
mobilican_hw/config/lizi_2/: lizi_hw.yaml
mobilican_hw/include/mobilican_hw/: mobile_robot.h  robot_builder.h  robots_factory.h  utils.h
mobilican_hw/include/mobilican_hw/hardware/: bms.h  effort_pos_control.h  hw_id.h  ric_client.h  roboteq_client.h
mobilican_hw/include/mobilican_hw/hardware/dynamixel/: dxl_motors_builder.h  rw_errs.h
mobilican_hw/include/mobilican_hw/hardware/ricboard/: ric_client.h  ric_observer.h
mobilican_hw/include/mobilican_hw/hardware/wheel/: velocities_lpf.h  wheel.h  wheels_control.h
mobilican_hw/include/mobilican_hw/robots_impl/: armadillo_1.h  komodo_2.h  lizi_2.h  robot_group_a.h
mobilican_hw/include/mobilican_hw/robots_impl/lizi_2/: lizi_2.h  velocities_lpf.h
mobilican_hw/launch/: armadillo2_hw.launch  diagnostics.launch  komodo2_hw.launch  komodo_2_hw.launch  lizi2_hw.launch  lizi_2_hw.launch  mobilican_hw.launch  trx_hw.launch
mobilican_hw/ric_hex/: ricboard.ino.hex
mobilican_hw/src/: hw_node.cpp  mobile_robot.cpp
mobilican_hw/src/hardware/: bms.cpp  dxl_motors_builder.cpp  effort_pos_control.cpp  ric_client.cpp  roboteq_client.cpp
mobilican_hw/src/hardware/wheel/: velocities_lpf.cpp  wheels_control.cpp
mobilican_hw/src/lizi_2/: lizi_2.cpp
mobilican_hw/src/robots_impl/: armadillo_1.cpp  komodo_2.cpp  lizi_2.cpp  robot_group_a.cpp
mobilican_macros/: CMakeLists.txt  package.xml
mobilican_moveit/armadillo_moveit_config/config/: armadillo_robot.srdf
mobilican_msgs/: CMakeLists.txt  package.xml
mobilican_msgs/msg/: WheelsPID.msg
mobilican_navigation/: CMakeLists.txt  package.xml
mobilican_navigation/config/komodo2/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
mobilican_navigation/config/komodo_2/: global_costmap_params.yaml
mobilican_navigation/config/trx/: costmap_common_params.yaml
mobilican_navigation/launch/: amcl.launch  hector_mapping.launch  hector_slam.launch
mobilican_navigation/maps/maze/: maze.pgm  maze.yaml
mobilican_teleop/: CMakeLists.txt  package.xml
mobilican_teleop/config/: trx.yaml
mobilican_teleop/launch/: teleop.launch
mobilican_teleop/src/: teleop_node.py
mobilican_utils/: CMakeLists.txt  package.xml
mobilican_utils/launch/: hector_amcl.launch  laser_scan_matcher.launch  pointcloud2laserscan.launch
