<?xml version="1.0"?>
<package format="2">
  <name>mobilican_gazebo</name>
  <version>0.0.0</version>
  <description>The mobilican_gazebo package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="sub@todo.todo">sub</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <author>Jonathan Bohren</author>
  <author>Dave Coleman</author>
  <author>Elhay Rauper</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_dev</build_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>control_toolbox</depend>
  <depend>controller_manager</depend>
  <depend>pluginlib</depend>
  <depend>hardware_interface</depend>
  <depend>transmission_interface</depend>
  <depend>joint_limits_interface</depend>
  <depend>gazebo_ros_control</depend>
  <depend>urdf</depend>
  <depend>angles</depend>

  <export>
    <gazebo_ros_control plugin="${prefix}/armadillo_sim_plugins.xml"/>
  </export>

</package>
