<?xml version="1.0"?>
<package format="2">
  <name>mobilican_hw</name>
  <version>0.0.0</version>
  <description>The mobilican_hw package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="sub@todo.todo">sub</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ric_interface_ros</build_depend>
  <build_depend>lpf_ros</build_depend>
  <build_depend>bms_interface</build_depend>
  <build_depend>roboteq_control</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>mobilican_msgs</build_depend>
  <build_depend>dxl_interface</build_depend>

  <exec_depend>ric_interface_ros</exec_depend>
  <exec_depend>lpf_ros</exec_depend>
  <exec_depend>bms_interface</exec_depend>
  <exec_depend>roboteq_control</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>control_toolbox</exec_depend>
  <exec_depend>mobilican_msgs</exec_depend>
  <exec_depend>dxl_interface</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
